判断是否存在新版本&从服务器下载新版本&新增主界面&判断是否有网络

--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -10,19 +10,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="版本1.0"
+        android:layout_marginBottom="25dp"
         android:shadowColor="#ff0000"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1"
+        android:text=""
         android:textColor="#000000"
         android:textSize="18sp" />
-    
-    <ProgressBar 
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_centerInParent="true"
-       />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_splash_updateinfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:shadowColor="#ff0000"
+        android:text="下载最新版本：10%"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
 </RelativeLayout>
