--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_splash_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/luncher_bg" >
@@ -25,7 +26,6 @@
         android:layout_centerInParent="true" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_splash_updateinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,6 +33,7 @@
         android:shadowColor="#ff0000"
         android:text="下载最新版本：10%"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
