--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -13,6 +13,8 @@
         android:textColor="#000000"
         android:textSize="20sp" />
 
+    <!-- 也可以直接获得焦点实现走马灯效果 添加 android:focusable="true"属性 -->
+
     <com.yafrees.mobilesafe.view.FocusedTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,11 +22,11 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:ellipsize="marquee"
-        android:focusable="true"
         android:focusableInTouchMode="true"
         android:singleLine="true"
         android:text="功能最强大的手机卫士，快来下载吧！下载就有机会领取千元大礼包，还有更多好礼等你来拿。。。"
-        android:textColor="#ff4500" />
+        android:textColor="#ff4500"
+        android:textSize="16sp" />
 
     <GridView
         android:id="@+id/list_home"
