--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mobilesafesetting="http://schemas.android.com/apk/res/com.yafrees.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -16,6 +17,9 @@
     <com.yafrees.mobilesafe.view.SettingItemView
         android:id="@+id/siv_update"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        mobilesafesetting:title="设置自动更新"
+        mobilesafesetting:update_off="自动更新已关闭"
+        mobilesafesetting:update_on="自动更新已开启" />
 
 </LinearLayout>
