--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,5 +17,16 @@
      <item name="android:windowNoTitle">true</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+        <style name="text_content_style" parent="AppBaseTheme">
+     <item name="android:textSize">18sp</item>
+     <item name="android:textColor">#000000</item>
+     <item name="android:layout_marginTop">8dp</item>
+     <item name="android:layout_marginLeft">10dp</item>
+     <item name="android:layout_height">wrap_content</item>
+     <item name="android:layout_width">wrap_content</item>
+      <item name="android:gravity">center_vertical</item>
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
 
 </resources>
