--- a/res/layout/activity_setup1.xml
+++ b/res/layout/activity_setup1.xml
@@ -75,6 +75,7 @@
             android:layout_centerInParent="true"
             android:src="@drawable/setup1" />
         <Button 
+            android:background="@drawable/button_selector"
             android:drawableRight="@drawable/next"
             android:text="下一步"
             android:layout_marginLeft="15dp"
