--- a/res/layout/dialog_setuppwd.xml
+++ b/res/layout/dialog_setuppwd.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
-    android:background="#ffffff"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
@@ -38,12 +38,14 @@
             android:id="@+id/ok"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_selector"
             android:text="确定" />
 
         <Button
             android:id="@+id/cancel"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_selector"
             android:text="取消" />
     </LinearLayout>
 
