手机防盗功能的四个设置向导界面的完成&设置向导界面和手机防盗界面跳转的实现。

--- a/res/layout/activity_setup4.xml
+++ b/res/layout/activity_setup4.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mobilesafesetting="http://schemas.android.com/apk/res/com.yafrees.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,33 +10,14 @@
         android:layout_height="55dp"
         android:background="#8866ff00"
         android:gravity="center"
-        android:text="1.欢迎使用手机防盗"
+        android:text="4.恭喜您设置完成"
         android:textColor="#000000"
         android:textSize="20sp" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:text="您的手机防盗卫士：" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="SIM卡变更报警" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="GPS追踪" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程数据销毁" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程锁屏" />
+    <CheckBox 
+        android:text="当前状态：手机防盗没有开启"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -47,22 +29,22 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@android:drawable/presence_offline" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/presence_offline" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/presence_offline" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@android:drawable/presence_online" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
     </LinearLayout>
 
     <RelativeLayout
@@ -73,11 +55,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/setup1" />
+            android:src="@drawable/setup3" />
 
-        <Button
-            style="@style/button_next_style"
-             />
+        <Button style="@style/button_previous_style" />
+
+        <Button style="@style/button_next_style" 
+            android:text="设置完成"/>
     </RelativeLayout>
 
 </LinearLayout>
