--- a/res/layout/activity_setup2.xml
+++ b/res/layout/activity_setup2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mobilesafesetting="http://schemas.android.com/apk/res/com.yafrees.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,33 +10,20 @@
         android:layout_height="55dp"
         android:background="#8866ff00"
         android:gravity="center"
-        android:text="1.欢迎使用手机防盗"
+        android:text="2.手机SIM卡绑定"
         android:textColor="#000000"
         android:textSize="20sp" />
 
     <TextView
         style="@style/text_content_style"
-        android:text="您的手机防盗卫士：" />
+        android:text="通过绑定SIM卡：\n下次重启手机如果发现SIM卡变化\n就会发送报警短信" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="SIM卡变更报警" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="GPS追踪" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程数据销毁" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程锁屏" />
+    <com.yafrees.mobilesafe.view.SettingItemView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        mobilesafesetting:title="点击绑定SIM卡"
+        mobilesafesetting:update_off="SIM卡没有绑定"
+        mobilesafesetting:update_on="SIM卡已经绑定" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -47,12 +35,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_online" />
+            android:src="@android:drawable/presence_offline" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
+            android:src="@android:drawable/presence_online" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -73,11 +61,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/setup1" />
-
-        <Button
-            style="@style/button_next_style"
-             />
+            android:src="@drawable/setup2" />
+<Button style="@style/button_previous_style" />
+        <Button style="@style/button_next_style" />
     </RelativeLayout>
 
 </LinearLayout>
