--- a/res/layout/activity_setup3.xml
+++ b/res/layout/activity_setup3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mobilesafesetting="http://schemas.android.com/apk/res/com.yafrees.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,33 +10,24 @@
         android:layout_height="55dp"
         android:background="#8866ff00"
         android:gravity="center"
-        android:text="1.欢迎使用手机防盗"
+        android:text="3.设置安全号码"
         android:textColor="#000000"
         android:textSize="20sp" />
 
     <TextView
         style="@style/text_content_style"
-        android:text="您的手机防盗卫士：" />
+        android:text="SIM卡变更后：\n报警短信会发给安全号码" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="SIM卡变更报警" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入安全号码" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="GPS追踪" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程数据销毁" />
-
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程锁屏" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_other"
+        android:text="选择联系人" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -47,17 +39,17 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@android:drawable/presence_offline" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/presence_offline" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@android:drawable/presence_online" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/presence_offline" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -73,11 +65,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/setup1" />
+            android:src="@drawable/setup3" />
 
-        <Button
-            style="@style/button_next_style"
-             />
+        <Button style="@style/button_previous_style" />
+
+        <Button style="@style/button_next_style" />
     </RelativeLayout>
 
 </LinearLayout>
