--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -18,7 +18,7 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-        <style name="text_content_style" parent="AppBaseTheme">
+     <style name="text_content_style" parent="AppBaseTheme">
      <item name="android:textSize">18sp</item>
      <item name="android:textColor">#000000</item>
      <item name="android:layout_marginTop">8dp</item>
@@ -26,6 +26,35 @@
      <item name="android:layout_height">wrap_content</item>
      <item name="android:layout_width">wrap_content</item>
       <item name="android:gravity">center_vertical</item>
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+            
+     <style name="button_next_style" parent="AppBaseTheme">
+     <item name="android:background">@drawable/button_selector</item>
+     <item name="android:drawableRight">@drawable/next</item>
+     <item name="android:text">下一步</item>
+       <item name="android:onClick">next</item>
+     <item name="android:layout_marginRight">15dp</item>
+     <item name="android:layout_marginBottom">8dp</item>
+      <item name="android:layout_alignParentBottom">true</item>
+      <item name="android:layout_width">wrap_content</item>
+      <item name="android:layout_height">wrap_content</item>
+      <item name="android:layout_alignParentRight">true</item>
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+       <style name="button_previous_style" parent="AppBaseTheme">
+     <item name="android:background">@drawable/button_selector</item>
+     <item name="android:drawableLeft">@drawable/previous</item>
+     <item name="android:text">上一步</item>
+     <item name="android:onClick">previous</item>
+     <item name="android:layout_marginLeft">15dp</item>
+     <item name="android:layout_marginBottom">8dp</item>
+      <item name="android:layout_alignParentBottom">true</item>
+      <item name="android:layout_width">wrap_content</item>
+      <item name="android:layout_height">wrap_content</item>
+      <item name="android:layout_alignParentLeft">true</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
