设置重新进入设置向导的shap形状资源。

--- a/res/layout/activity_lostandfind.xml
+++ b/res/layout/activity_lostandfind.xml
@@ -80,6 +80,7 @@
     <!-- ***************************************************** -->
 
     <TextView
+        android:background="@drawable/shape_selector"
         android:onClick="reEnterSetting"
         android:clickable="true"
         android:layout_width="match_parent"
