--- a/res/layout/activity_setup2.xml
+++ b/res/layout/activity_setup2.xml
@@ -19,6 +19,7 @@
         android:text="通过绑定SIM卡：\n下次重启手机如果发现SIM卡变化\n就会发送报警短信" />
 
     <com.yafrees.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_bind_sim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         mobilesafesetting:title="点击绑定SIM卡"
