新增练习人选择Activity&读取手机里的联系人并显示在联系人选择类&完成设置安全号码向导页的代码。

--- a/res/layout/activity_setup3.xml
+++ b/res/layout/activity_setup3.xml
@@ -19,11 +19,13 @@
         android:text="SIM卡变更后：\n报警短信会发给安全号码" />
 
     <EditText
+        android:id="@+id/et_safenumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="请输入安全号码" />
 
     <Button
+        android:onClick="selectContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_other"
