--- a/res/layout/select_item.xml
+++ b/res/layout/select_item.xml
@@ -8,18 +8,15 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="姓名"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ff0000" />
+        android:layout_marginTop="5dp"
+        android:text="姓名" />
 
     <TextView
         android:id="@+id/tv_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="电话号码"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="电话号码" />
 
 </LinearLayout>
