--- a/res/layout/activity_lostandfind.xml
+++ b/res/layout/activity_lostandfind.xml
@@ -27,6 +27,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/tv_safenumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -61,12 +62,12 @@
             android:textSize="18sp" />
 
         <ImageView
+            android:id="@+id/iv_safestatus"
             android:layout_width="23dp"
             android:layout_height="23dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/unlock" />
+            android:layout_marginTop="10dp" />
     </RelativeLayout>
 
     <View
@@ -80,15 +81,15 @@
     <!-- ***************************************************** -->
 
     <TextView
-        android:background="@drawable/shape_selector"
-        android:onClick="reEnterSetting"
-        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="重新进入设置向导"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_selector"
+        android:clickable="true"
+        android:onClick="reEnterSetting"
+        android:text="重新进入设置向导"
         android:textColor="#000000"
         android:textSize="18sp" />
 
@@ -103,12 +104,12 @@
     <!-- ***************************************************** -->
 
     <TextView
-        android:background="#44000000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#44000000"
         android:text="功能简介"
         android:textColor="#000000"
         android:textSize="18sp" />
@@ -120,13 +121,13 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="#55000000" />
-    
+
     <TextView
         style="@style/text_content_style"
         android:drawableLeft="@android:drawable/star_big_on"
         android:text="GPS追踪：#location#" />
-    
-      <TextView
+
+    <TextView
         style="@style/text_content_style"
         android:drawableLeft="@android:drawable/star_big_on"
         android:text="播放报警音乐：#alarm#" />
