--- a/res/layout/activity_setup4.xml
+++ b/res/layout/activity_setup4.xml
@@ -14,10 +14,11 @@
         android:textColor="#000000"
         android:textSize="20sp" />
 
-    <CheckBox 
-        android:text="当前状态：手机防盗没有开启"
+    <CheckBox
+        android:id="@+id/cb_protect"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="当前状态：手机防盗没有开启" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -59,8 +60,9 @@
 
         <Button style="@style/button_previous_style" />
 
-        <Button style="@style/button_next_style" 
-            android:text="设置完成"/>
+        <Button
+            style="@style/button_next_style"
+            android:text="设置完成" />
     </RelativeLayout>
 
 </LinearLayout>
