播放报警音乐。

--- a/res/layout/activity_lostandfind.xml
+++ b/res/layout/activity_lostandfind.xml
@@ -135,7 +135,7 @@
     <TextView
         style="@style/text_content_style"
         android:drawableLeft="@android:drawable/star_big_on"
-        android:text="远程删除数据：#wipedate#" />
+        android:text="远程删除数据：#wipedata#" />
 
     <TextView
         style="@style/text_content_style"
