--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -21,5 +21,13 @@
         mobilesafesetting:title="设置自动更新"
         mobilesafesetting:update_off="自动更新已关闭"
         mobilesafesetting:update_on="自动更新已开启" />
+    
+    <com.yafrees.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_show_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        mobilesafesetting:title="设置来电归属地显示"
+        mobilesafesetting:update_off="归属地显示已关闭"
+        mobilesafesetting:update_on="归属地显示已开启" />
 
 </LinearLayout>
