显示框的拖动和拖动的原理。

--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -34,5 +34,10 @@
         android:id="@+id/scv_change_bg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    
+    <com.yafrees.mobilesafe.view.SettingClickView
+        android:id="@+id/scv_change_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
