--- a/res/layout/activity_drag_view.xml
+++ b/res/layout/activity_drag_view.xml
@@ -18,7 +18,7 @@
         android:id="@+id/iv_drag_view"
         android:layout_marginTop="60dp"
         android:src="@drawable/drag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="120dp"
+        android:layout_height="40dp"/>
 
 </RelativeLayout>
