归属地提示框界面上下两个文本的交换显示。

--- a/res/layout/activity_drag_view.xml
+++ b/res/layout/activity_drag_view.xml
@@ -12,6 +12,17 @@
         android:background="@drawable/call_locate_blue"
         android:text="按住提示框拖动到任意位置\n按手机返回键立即生效"/>
     
+    <TextView 
+        android:visibility="invisible"
+        android:id="@+id/tv_bottom"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:background="@drawable/call_locate_blue"
+        android:text="按住提示框拖动到任意位置\n按手机返回键立即生效"/>
+    
     
     
     <ImageView 
